chore: document warning about WARNING: Dynamic loading of agents will be disallowed by default in a future release