@@ -36,6 +36,20 @@ The capabilities needed by this extension are: (which are provided by the helm c
 - SETGID
 - AUDIT_WRITE
 
+## Needed access to the java process
+
+To be able to discover we need access to the java process. This is done by using the `attach` mechanism of the JVM. This is a standard mechanism and is used by many other tools.
+You may see a warning in the logs of the JVM that the extension is attaching to the JVM. This is normal and expected.
+It will look like this:
+
+```
+WARNING: A Java agent has been loaded dynamically (...javaagent-init.jar)
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+```
+
+To avoid this warning or be able to use this extension in future java releases you can use the `-XX:+EnableDynamicAgentLoading` flag in your JVM commandline to be able to load the javaagent dynamically.
+
+
 ## Installation
 
 ### Using Helm in Kubernetes
